--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^2.2.4",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@prisma/client": "3.12.0",
     "framer-motion": "^6.5.1",
     "gray-matter": "^4.0.3",
     "next": "12.2.3",
@@ -30,6 +31,7 @@
     "@types/react-syntax-highlighter": "^15.5.5",
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.3",
+    "prisma": "3.12.0",
     "typescript": "4.7.4"
   }
 }
