ui changes - dark mode

--- a/.env
+++ b/.env
@@ -4,4 +4,8 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB (Preview).
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL=''
+DATABASE_URL='mysql://liahfp9vzfi18x6bedz9:pscale_pw_F9BoVryim0UItphJYVuWBvGrSttdBvPv266M8hLLL0M@us-east.connect.psdb.cloud/personal-website?sslaccept=strict'
+
+#  pscale connect personal-website --port 3309 // connect to the db
+# npx prisma db push  // create new db
+# npx prisma studio  // prisma gui
