--- a/package.json
+++ b/package.json
@@ -13,14 +13,18 @@
     "@chakra-ui/react": "^2.2.4",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@googlemaps/react-wrapper": "^1.1.35",
     "@prisma/client": "3.12.0",
     "framer-motion": "^6.5.1",
+    "google-map-react": "^2.2.0",
+    "google-maps-react": "^2.0.6",
     "gray-matter": "^4.0.3",
     "next": "12.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "react-markdown": "^8.0.3",
+    "react-simple-maps": "^3.0.0",
     "react-syntax-highlighter": "^15.5.0",
     "tailwindcss": "^3.1.8"
   },
